--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '8.0.x' # Adjust as needed
-
+        
+    - name: Pull Docker image
+      run: docker pull your-image-name:your-tag
+    
     - name: Restore dependencies
       run: dotnet restore
 
